--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "vite --config ./client/vite.config.js",
+    "build": "vite build --config ./client/vite.config.js",
+    "preview": "vite preview --config ./client/vite.config.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
