--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,12 +5,12 @@ WORKDIR /app
 RUN npm install -g pnpm
 
 # Copy dependencies
-COPY ./server/package.json ./server/pnpm-lock.yaml ./
+COPY ./client/package.json ./client/pnpm-lock.yaml ./
 # Install dependencies and asegure that the installed dependencies are exact the same als copyed
 RUN pnpm install --frozen-lockfile
 
-# Copy all from server folder
-COPY ./server .
+# Copy all from client folder
+COPY ./client .
 
 # Run the command
 CMD ["pnpm", "dev"]
