--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
   "name": "whatsappbro",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
     "lint": "eslint .",
-    "dev": "vite --config ./client/vite.config.js",
-    "build": "vite build --config ./client/vite.config.js",
-    "preview": "vite preview --config ./client/vite.config.js"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.0.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.6"
+    "dev": "docker-compose up --build -d",
+    "stop": "docker-compose down",
+    "logs": "docker-compose logs -f"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
