--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,18 @@ services:
       - '3306:3306' # Default MariaDB port
     restart: always # Always restart when the service stop, becouse we allways need the DB
 
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: whatsappbro-phpmyadmin
+    environment:
+      PMA_HOST: database
+      PMA_PORT: 3306
+      MYSQL_ROOT_PASSWORD: 123
+    ports:
+      - '8080:80'
+    depends_on:
+      - database
+
   server:
     container_name: whatsappbro-server
     build:
